# AI-Phase

./: .gitignore
fastapi-template/: .env.example  alembic.ini  main.py  pyproject.toml
fastapi-template/app/: config.py  database.py  dependencies.py  exceptions.py  middleware.py
fastapi-template/app/core/: model.py  repository.py  schemas.py
fastapi-template/app/users/: api.py  commands.py  model.py  repository.py  schemas.py  service.py
fastapi-template/app/utils/: pagination.py
fastapi-template/migrations/: env.py
fastapiAI/: ai_client.py  config.py  config.toml  database.py  exceptions.py  main.py
fastapiAI/ai_/: api.py  schema.py  service.py
fastapiAI/users/: api.py  models.py  schema.py  service.py  session_service.py
fastapiAI/utils/: models.py  security.py
reelproducer/: main.py  prompt.py  tmdb.py
reelproducer/output/: metadata.json  script.txt
starter/: SimpleIntegration.py  chatbot.py  embedding_semantic_search.py  learn.txt  semantic search.py  simple_rag_pipe.py  tokenizer.py
